# sed-lex-story

./: GENERATION_FLOW.md  NARRATIVE_AI_IMPLEMENTATION_SUMMARY.md  PIPELINE_PROFILE.md  README (1).md  README.md  WORKFLOWS.md  WORKFLOW_PARAMETER_FLOW.md  WORKFLOW_USAGE.md  _character_txt2img_portrait.json  _multiview__Qwen_character_flow.json  back_view_prompt.txt  base_setup.txt  body_language.txt  camera_angle.txt  character_img2img_variation.json  character_sheet_main.txt  comfy_workflow_step1_hq_reference.json  comfy_workflow_step2_multiview_generation.json  create_story_segment_variants_workflow.json  facial_expression.txt  gaze_direction.txt  hand_position.txt  img2img_variation.json  lighting_mood.txt  outfit_detail.txt  pose_type.txt  pyproject.toml  side_view_prompt.txt  txt2img_landscape.json  txt2img_portrait.json  txt2img_square.json  txt2img_variants.json  world_txt2img_element.json
backend/: alembic.ini  requirements-dev.txt  requirements.txt
backend/alembic_migrations/: __init__.py  env.py  qfx.py
backend/app/: main.py
backend/scripts/: create_admin.py  seed_legal_styles.py
backend/tests/: FINAL_TEST_REPORT.md  GENERATION_TEST_RESULTS.md  TEST_GENERATION_SUMMARY.md  conftest.py  test_ai_form_fill_service.py  test_auth.py  test_characters.py  test_db_migrations.py  test_export_v1.py  (+12 more)
docs/: CREATIVE_MODE_GUIDE_EN.md  CREATIVE_MODE_GUIDE_RU.md  PIPELINE_PROFILE.md  QUEST_AUTHORING_GUIDE_EN.md  WORKFLOW_PARAMETER_FLOW.md
front/: README.md  package.json  tsconfig.json  vite.config.ts
frontend/: package.json  tsconfig.node.json  vite.config.ts
(+431 files in other folders)
